--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 Cart
               </a>
             </li>
-            <li>
+            <li class="hamburger">
               <i class="ri-menu-line"></i>
             </li>
           </ul>
@@ -97,7 +97,7 @@
       <div class="mainContainer">
         <div class="heading">
           <h1>Quality born from impact</h1>
-          <div class="scollD">
+          <div class="scrollD">
             <svg class="scrollSVG"
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
@@ -117,10 +117,8 @@
             alt=""
             class="main-img-one"
             style="
-              transform: translate3d(0px, 0.642%, 0px)
-                scale3d(1.09358, 1.09358, 1) rotateX(0deg) rotateY(0deg)
-                rotateZ(0deg) skew(0deg, 0deg);
-              transform-style: preserve-3d;
+              transform: translate3d(0px, 0.642%, 0px) scale3d(1.09358, 1.09358, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+      transform-style: preserve-3d;
             "
           />
         </div>
